# automate

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  config.example.toml  database.sqlite  git-tool.yml
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: rust.yml
agent/: Cargo.toml
agent/src/: config.rs  filter.rs  job.rs  main.rs  prelude.rs  services.rs  testing.rs
agent/src/collectors/: calendar.rs  differential.rs  ecb_rates.rs  github_notifications.rs  github_releases.rs  mod.rs  rss.rs  spotify_liked_tracks.rs  xkcd.rs  youtube.rs
agent/src/db/: cache.rs  mod.rs  sqlite.rs
agent/src/filter/: expr.rs  lexer.rs  mod.rs  token.rs
agent/src/jobs/: calendar.rs  cron.rs  github_notifications.rs  github_notifications_cleanup.rs  github_releases.rs  mod.rs  oauth_reauthorization.rs  rss.rs  spotify_yearly_playlist.rs  todoist_cleanup.rs  xkcd.rs  ynab_stocks.rs  youtube.rs
agent/src/parsers/: calendar.rs  interpolation.rs  key_value_pair.rs  mod.rs
agent/src/publishers/: spotify.rs  spotify_add_to_playlist.rs  todoist_upsert.rs
agent/src/services/: alphavantage.rs  debounce.rs  mod.rs
agent/src/web/: mod.rs  oauth.rs  telemetry.rs  ui.rs  webhooks.rs
agent/src/web/api/: auth.rs  kv.rs  mod.rs  queue.rs  user.rs
agent/src/web/helpers/: mod.rs  oidc.rs  request.rs
agent/src/webhooks/: azure_monitor.rs  grafana.rs  grey.rs  honeycomb.rs  mod.rs  sentry.rs  tailscale.rs  terraform.rs
agent/tests/data/: github_notifications.json  github_releases.json  youtube.atom.xml
api/: Cargo.toml
api/src/: auth.rs  kv.rs  lib.rs  queue.rs  user.rs
src/: config.rs  job.rs  main.rs  prelude.rs  services.rs  testing.rs
src/collectors/: calendar.rs  differential.rs  github_notifications.rs  github_releases.rs  incremental.rs  mod.rs  rss.rs  spotify_liked_tracks.rs  xkcd.rs  youtube.rs
src/db/: cache.rs  fjall.rs  mod.rs  partition.rs  sqlite.rs  sync.rs
src/engines/: cron.rs  mod.rs
src/filter/: expr.rs  lexer.rs  mod.rs  parser.rs  value.rs
src/jobs/: calendar.rs  cron.rs  github_notifications.rs  github_notifications_cleanup.rs  github_releases.rs  mod.rs  rss.rs  spotify_yearly_playlist.rs  todoist_cleanup.rs  xkcd.rs  youtube.rs
src/parsers/: calendar.rs  html.rs  mod.rs
src/publishers/: mod.rs  spotify.rs  spotify_add_to_playlist.rs  todoist.rs  todoist_complete.rs  todoist_create.rs  todoist_upsert.rs
src/ui/: admin.js  csrf.rs  db.rs  entity.rs  helpers.rs  index.html  mod.rs  page.rs  page_header.rs  styles.css
src/web/: admin.rs  mod.rs  oauth.rs  oidc.rs  telemetry.rs  ui.rs  webhooks.rs
src/web/helpers/: csrf.rs  mod.rs  oidc.rs
src/webhooks/: azure_monitor.rs  grafana.rs  honeycomb.rs  mod.rs  sentry.rs  tailscale.rs  terraform.rs
src/workflows/: calendar.rs  cron.rs  github_notifications.rs  github_notifications_cleanup.rs  github_releases.rs  github_releases_to_todoist.rs  honeycomb_alerts_to_todoist.rs  mod.rs  rss.rs  rss_to_todoist.rs  spotify_yearly_playlist.rs  tailscale_alerts_to_todoist.rs  xkcd.rs  xkcd_to_todoist.rs  youtube.rs
tests/data/: calendar_large.ics  xkcd.rss.xml
ui/: Cargo.toml  Trunk.toml  index.html  styles.css  styles.scss
ui/src/: api.rs  app.rs  auth.rs  fixtures.rs  main.rs  search.rs  util.rs
ui/src/components/: admin_shell.rs  alert.rs  app_bar.rs  card.rs  connect_menu.rs  entity.rs  helpers.rs  integrations.rs  json_highlight.rs  kv.rs  layout.rs  mod.rs  page_header.rs  page_title.rs  partition_browser.rs  queue.rs  refresh_button.rs
ui/src/pages/: admin.rs  auth_callback.rs  dashboard.rs  db.rs  kv.rs  landing.rs  login.rs  mod.rs  not_found.rs  protected.rs  queue.rs
