[package]
name = "automate"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
async-trait = "0.1.89"
calcard = "0.3.2"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.59", features = ["cargo", "derive", "string"] }
cron = "0.15.0"
croner = { version = "3.0.1", features = ["serde"] }
dotenvy = "0.15"
feed-rs = "2.3.1"
futures-concurrency = "7.7.1"
hex = "0.4.3"
htmd = "0.5.0"
hmac = "0.12.1"
html-escape = "0.2.13"
human-errors = { version = "0.2.3", features = ["pretty"] }
openssl-sys = { version = "0.9.111", features = ["vendored"], optional = true }
regex = "1.12.3"
reqwest = { version = "0.12.27", features = ["rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
scraper = "0.25.0"
serde = { version = "1.0.219", features = ["alloc", "derive"] }
serde_json = { version = "1.0.149", features = ["alloc"] }
sha2 = "0.10.8"
sha256 = "1.6.0"
todoist-api = "1.0.0-alpha.1"
tokio = { version = "1.49.0", features = ["net", "io-std", "rt-multi-thread", "time", "fs", "tracing"] }
tokio-rusqlite = "0.7.0"
toml = "1.0.2"
tracing = { version = "0.1.44" }
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git", features = [
  "medama",
  "opentelemetry",
] }
urlencoding = "2.1.3"
uuid = "1.21.0"
yew = { version = "0.22.0", features = ["ssr"] }
futures = "0.3.32"
oauth2 = "5.0.0"

[dev-dependencies]
rstest = "0.26.1"
wiremock = "0.6"

[features]
openssl-vendored = ["dep:openssl-sys"]
