[workspace]
resolver = "3"
members = ["agent", "api"]

# The `ui` crate is compiled to WebAssembly with `trunk` and therefore uses a
# different target than the rest of the workspace. It is excluded so that
# `cargo build`/`test` for the agent are not affected by its wasm-only
# dependencies; build it with `trunk build` (or `trunk serve`) instead.
exclude = ["ui"]
