[package]
name = "automate"
version = "0.1.0"
edition = "2024"

[dependencies]
automate-api = { path = "../api" }
actix-web = "4.13.0"
async-trait = "0.1.89"
base64 = "0.22"
calcard = "0.3.4"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["cargo", "derive", "string"] }
cron = "0.16.0"
croner = { version = "3.0.1", features = ["serde"] }
dotenvy = "0.15"
feed-rs = "2.3.1"
futures-concurrency = "7.7.1"
hex = "0.4.3"
htmd = "0.5.4"
hmac = "0.13.0"
html-escape = "0.2.13"
human-errors = { version = "0.2.3", features = ["pretty"] }
include_dir = "0.7.4"
inventory = "0.3.22"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
openssl-sys = { version = "0.9.116", features = ["vendored"], optional = true }
regex = "1.12.3"
reqwest = { version = "0.12.27", features = ["rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
scraper = "0.27.0"
serde = { version = "1.0.219", features = ["alloc", "derive"] }
serde_json = { version = "1.0.150", features = ["alloc"] }
sha2 = "0.11.0"
sha256 = "1.6.0"
todoist-api = "1.0.0-alpha.1"
tokio = { version = "1.52.3", features = ["net", "io-std", "rt-multi-thread", "time", "fs", "tracing"] }
tokio-rusqlite = "0.7.0"
toml = "1.1.2"
tracing = { version = "0.1.44" }
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git", features = [
  "umami",
  "opentelemetry",
] }
urlencoding = "2.1.3"
uuid = "1.23.2"
futures = "0.3.32"
oauth2 = "5.0.0"

[dev-dependencies]
base64 = "0.22"
rstest = "0.26.1"
wiremock = "0.6"

[features]
openssl-vendored = ["dep:openssl-sys"]
